fix: transparent bg on mobile

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,7 +28,9 @@
 }
 
 .container.is-colored {
-  background-color: #d5d1f3;
+  @media screen and (min-width: 769px) {
+    background-color: #d5d1f3;
+  }
   border-radius: 12px;
   z-index: -2;
 }
